--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "backendmarket",
-  "version": "1.0.0",
-  "description": "Backend do projeto Market",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "devStart": "nodemon index.js"
-  },
-  "author": "gothmate",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^5.0.0",
-    "cors": "^2.8.5",
-    "csrf": "^3.1.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "helmet": "^7.0.0",
-    "mongoose": "^7.3.4",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.21",
-    "openssl": "^2.0.0"
-  }
+	"name": "backendmarket",
+	"version": "1.0.0",
+	"description": "Backend do projeto Market",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js",
+		"devStart": "nodemon index.js"
+	},
+	"author": "gothmate",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.1.0",
+		"connect-flash": "^0.1.1",
+		"connect-mongo": "^5.0.0",
+		"cors": "^2.8.5",
+		"csrf": "^3.1.0",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"express-session": "^1.17.3",
+		"helmet": "^7.0.0",
+		"mongoose": "^7.3.4",
+		"mysql": "^2.18.1",
+		"openssl": "^2.0.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.1"
+	}
 }
