--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
 		"connect-flash": "^0.1.1",
 		"connect-mongo": "^5.0.0",
 		"cors": "^2.8.5",
-		"csrf": "^3.1.0",
 		"dotenv": "^16.3.1",
+		"dotenv-safe": "^8.2.0",
 		"express": "^4.18.2",
 		"express-session": "^1.17.3",
 		"helmet": "^7.0.0",
+		"jsonwebtoken": "^9.0.1",
 		"mongoose": "^7.3.4",
 		"mysql": "^2.18.1",
 		"openssl": "^2.0.0"
