Feature (Cart): - adicção do cartController, cartModel e atualização do Next para versão 14

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "backendmarket",
+	"name": "backendgsevenapp",
 	"version": "1.0.0",
-	"description": "Backend do projeto Market",
+	"description": "Backend do projeto GsevenApp",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
