--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node index.js",
-		"devStart": "nodemon index.js"
+		"devStart": "nodemon index.js",
+		"vercel-build": "yarn mongoose migrate deploy"
 	},
 	"author": "gothmate",
 	"license": "ISC",
