--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node index.js",
-		"devStart": "nodemon index.js",
-		"vercel-build": "npx mongoose migrate deploy"
+		"devStart": "nodemon index.js"
 	},
 	"author": "gothmate",
 	"license": "ISC",
